groups contain maps of cycles