@@ -8,7 +8,10 @@ import org.dexenjaeger.algebra.utils.MoreArrayUtils;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
@@ -16,16 +19,35 @@ import static org.mockito.Mockito.mock;
 class ValidatedGroupTest {
   @Test
   void staticInitializerTest() {
-    ValidatedGroup.createGroup(
-      new ValidatedGroupSpec(
-        Collections.singletonMap("I", "I"),
-        new ValidatingBinaryOperator(
-          MoreArrayUtils.createArray("I"),
-          Collections.singletonMap("I", 0),
-          (i, j) -> 0
-        )
-      ),
+    SafeGroup group = ValidatedGroup.createGroup(
+      ValidatedGroupSpec.builder()
+        .inversesMap(Map.of("I", "I", "a", "a"))
+        .cyclesMap(Map.of(
+          1, Set.of(List.of("I")),
+          2, Set.of(List.of("a", "I"))
+        ))
+        .binaryOperator(new ValidatingBinaryOperator(
+          MoreArrayUtils.createArray("I", "a"),
+          Map.of("I", 0, "a", 1),
+          (i, j) -> (i + j) % 2
+        ))
+        .build(),
       (id, binOp) -> mock(ValidatedMonoid.class)
+    );
+    
+    assertEquals(
+      Set.of(List.of("I")),
+      group.getNCycles(1)
+    );
+    
+    assertEquals(
+      Set.of(List.of("a", "I")),
+      group.getNCycles(2)
+    );
+    
+    assertEquals(
+      Set.of(),
+      group.getNCycles(3)
     );
   }
   
@@ -44,15 +66,15 @@ class ValidatedGroupTest {
     );
     
     RuntimeException e = assertThrows(RuntimeException.class, () -> ValidatedGroup.createGroup(
-      new ValidatedGroupSpec(
-        Map.of("I", "I", "a", "b", "b", "a", "c", "c"),
-        summary.getBinaryOperator()
-      ),
+      ValidatedGroupSpec.builder()
+        .inversesMap(Map.of("I", "I", "a", "b", "b", "a", "c", "c"))
+        .binaryOperator(summary.getBinaryOperator())
+        .build(),
       (id, binOp) -> mock(ValidatedMonoid.class)
     ));
     
     assertEquals(
-      "Groups may only be created with valid inverses for all elements.", e.getMessage()
+      "Inverse map is not valid.", e.getMessage()
     );
   }
   
@@ -64,10 +86,11 @@ class ValidatedGroupTest {
     );
     
     ValidatedGroup result = ValidatedGroup.createGroup(
-      new ValidatedGroupSpec(
-        summary.getInverseMap(),
-        summary.getBinaryOperator()
-      )
+      ValidatedGroupSpec.builder()
+        .inversesMap(summary.getInverseMap())
+        .cyclesMap(summary.getCyclesMap())
+        .binaryOperator(summary.getBinaryOperator())
+        .build()
     );
     
     result.getElementsAsList().forEach(element -> assertEquals(
